# mini-plc

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/comm/: snap7_server.cpp  snap7_server.h
core/io_module/: dev_client.cpp  dev_client.h  dev_manager.cpp  dev_manager.h  modbus_client.cpp  modbus_client.h  snap7_client.cpp  snap7_client.h
core/memory/: plc_memory.cpp  plc_memory.h
core/runtime/: runtime_engine.h
core/st_compiler/: compiler.cpp  compiler.h
firmware/: firmware.cpp  firmware.h
grammar/: st_grammar.g4
grammar/.antlr/: st_grammar.interp  st_grammarLexer.java  st_grammarLexer.tokens  st_grammarParser.java
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  test_st_compiler.cpp
test/unit/: CMakeLists.txt  test_io_module_client.cpp  test_plc_memory.cpp  test_snap7_server.cpp
tools/: generate.sh
